docs/api/qiskit/0.36/qiskit.pulse.library.triangle.md
---
title: triangle
description: API reference for qiskit.pulse.library.triangle
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.pulse.library.triangle
---

# qiskit.pulse.library.triangle[¶](#qiskit-pulse-library-triangle "Permalink to this headline")

<span id="qiskit.pulse.library.triangle" />

`triangle(duration, amp, freq=None, phase=0, name=None)`

Generates triangle wave [`Waveform`](qiskit.pulse.library.Waveform "qiskit.pulse.library.Waveform").

For $A=$ `amp`, $T=$ `period`, and $\phi=$ `phase`, applies the midpoint sampling strategy to generate a discrete pulse sampled from the continuous function:

$$
f(x) = A \left(-2\left|\text{sawtooth}(x, A, T, \phi)\right| + 1\right)
$$

This a non-sinusoidal wave with linear ramping.

**Parameters**

*   **duration** (`int`) – Duration of pulse. Must be greater than zero.
*   **amp** (`complex`) – Pulse amplitude. Wave range is $[-$ `amp` $,$ `amp` $]$.
*   **freq** (`Optional`\[`float`]) – Pulse frequency, units of 1./dt. If `None` defaults to 1./duration.
*   **phase** (`float`) – Pulse phase.
*   **name** (`Optional`\[`str`]) – Name of pulse.

## Example

```python
import matplotlib.pyplot as plt
from qiskit.pulse.library import triangle
import numpy as np

duration = 100
amp = 1
freq = 1 / duration
triangle_wave = np.real(triangle(duration, amp, freq).samples)
plt.plot(range(duration), triangle_wave)
```

```python
[<matplotlib.lines.Line2D at 0x7f446e836070>]
```

![../\_images/qiskit.pulse.library.triangle\_0\_1.png](/images/api/qiskit/0.36/qiskit.pulse.library.triangle_0_1.png)

**Return type**

[`Waveform`](qiskit.pulse.library.Waveform "qiskit.pulse.library.waveform.Waveform")

