docs/api/qiskit/0.40/qiskit.pulse.library.triangle.md
---
title: triangle
description: API reference for qiskit.pulse.library.triangle
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.pulse.library.triangle
---

# qiskit.pulse.library.triangle

<span id="qiskit.pulse.library.triangle" />

`triangle(duration, amp, freq=None, phase=0, name=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/pulse/library/discrete.py "view source code")

Generates triangle wave [`Waveform`](qiskit.pulse.library.Waveform "qiskit.pulse.library.Waveform").

For $A=$ `amp`, $T=$ `period`, and $\phi=$ `phase`, applies the midpoint sampling strategy to generate a discrete pulse sampled from the continuous function:

$$
f(x) = A \left(-2\left\vert \text{sawtooth}(x, A, T, \phi)\right\vert  + 1\right)
$$

This a non-sinusoidal wave with linear ramping.

**Parameters**

*   **duration** (`int`) – Duration of pulse. Must be greater than zero.
*   **amp** (`complex`) – Pulse amplitude. Wave range is $[-$ `amp` $,$ `amp` $]$.
*   **freq** (`Optional`\[`float`]) – Pulse frequency, units of 1./dt. If `None` defaults to 1./duration.
*   **phase** (`float`) – Pulse phase.
*   **name** (`Optional`\[`str`]) – Name of pulse.

**Example**

```python
import matplotlib.pyplot as plt
from qiskit.pulse.library import triangle
import numpy as np

duration = 100
amp = 1
freq = 1 / duration
triangle_wave = np.real(triangle(duration, amp, freq).samples)
plt.plot(range(duration), triangle_wave)
plt.show()
```

([Source code](qiskit-pulse-library-triangle-1.py), [png](qiskit-pulse-library-triangle-1.png), [hires.png](qiskit-pulse-library-triangle-1.hires.png), [pdf](qiskit-pulse-library-triangle-1.pdf))

![../\_images/qiskit-pulse-library-triangle-1.png](/images/api/qiskit/0.40/qiskit-pulse-library-triangle-1.png)

**Return type**

[`Waveform`](qiskit.pulse.library.Waveform "qiskit.pulse.library.waveform.Waveform")

